--- a/Verkefni1.html
+++ b/Verkefni1.html
@@ -97,6 +97,8 @@
                                         <p>Þegar ég var orðinn sáttur með stöðu vefsíðunnar þá fann ég möppuna þar sem ég geymi alla kóða vefsíðunnar, hægrismelli músinni og smelli á "Git Bash Here". <br />
                                         Við það ætti að poppa upp Terminal gluggi. Inn í þann glugga setjum við afrit af kóða sem gefinn er upp af GitHub þegar búið er til nýtt repository. </p>
                                         <a href="#" class="image featured"><img src="images/Git-Hub_repo.JPG" alt="" /></a>
+                                        <p>Ég þurfti að bæta við þremur línum inn í þennan kóða og nefni ég þær hér fyrir neðan: <br />
+                                        add . <br /> commit -m "first commit" <br /> push</p>
                                         <p>Git bað mig um að skrá mig inn á GitHub, eftir það þurfti ég bara að endurhlaða GitHub síðunni, við það birtust allar skrár sem ég hlóð þar inn á í gegnum Git. <br />
                                         Eftir það þurfti ég að smella á settings, finna þar GitHub Pages og breyta source úr "none" í "main" og vista. <br />
                                         Eftir þetta ætti síðan að vera komin á netið.</p>
