--- a/Verkefni2.html
+++ b/Verkefni2.html
@@ -79,11 +79,61 @@
 								<!-- Content -->
 									<article id="content">
 										<header>
-											<h2>Hér á að koma nafnið á verkefninu</h2>
-											<p>Hér á að koma verkefni sjálft</p>
+											<h2>Verkefni 2</h2>
+											<p>Tölvustuddur skurður</p>
 										</header>
-										<a href="Verkefni2.html" class="image featured"><img src="images/Haskolinn.jpg" alt="" /></a>
-										<p>Ekkert komið eins og er.</p>
+										<a href="Verkefni2.html" class="image featured"><img src="images/Nes_standur1.jpg" alt="" /></a> 
+                                        <h2>Uppruni hugmyndar:</h2>
+                                        <p>hugmynd þessi varð til eftir matarboð hjá föður mínum þar sem hann var ný búinn að kaupa sér kaffi stand frá Nespresso.</p>
+                                        <a href="https://nespresso.is/collections/fylgihlutir/products/nesprs-capsule-dispenser-versilo-xi" class="image featured"><img src="images/Nes_standur.png" alt="" /></a>
+                                        <p>Þar sem þessi vara kostar 4.700kr. í Nespresso búðum hér á landi og er búin að vera uppseld í þó nokkurn tíma þá ákvað ég að búa til minn eiginn kaffi stand en nota hönnun Nespresso.</p>
+                                        <p>Ég tók upp pennaveskið, reglustiku, skrifblokk og hófst handa við að rissa upp grófar fallmyndir af standinum með málsetningum. </p>
+                                        <a href="#" class="image featured"><img src="images/Nes_standur_riss.jpg" alt="" /></a>
+                                        <p>Matarboði loknu þá sótti ég Fusion360 student version með Autodesk aðgang sem mér var úthlutað af Háskóla Íslands. </p>
+                                        <a href="https://www.autodesk.com/campaigns/education/student-design" class="image featured"><img src="images/Fusion360_Logo.png" alt="" /></a>
+                                        <p>Fusion360 reyndist einfallt í notkun eftir að hafa lært á Autodesk Inventor í Tölvuteikningar áfanga HÍ. <br/ >
+                                        Fótur kaffistandsins var 2,5cm eða 25mm að þykkt en þar sem ég ætlaði að skera allan standinn út úr einni plötu sem var 4mm að þykkt þá voru breytingar þar gerðar á hönnuninni. Í stað stakrar plötu sem var 25mm á þykkt þá skar ég út 3x4mm eins plötur með það í huga að stafla þeim upp svo þær lýkist sem mest einni þykkri plötu. Í staðin var samansettur fótur 12mm sem ætti að vera nóg til að halda standinum uppréttum. <br/ >
+                                        Fótur standsins útfleittur:</p>
+                                        <a href="#" class="image featured"><img src="images/Nes_standur_botn_utfleitt.JPG" alt="" /></a>
+                                        <p>Fótur standsins samansettur:</p>
+                                        <a href="#" class="image featured"><img src="images/Nes_standur_botn_samsett.JPG" alt="" /></a>
+                                        <p>Í þessar þrjár lengjur í miðjunni fara svo ein miðplata í miðjuna og tvær endaplötur sitthvoru megin(Miðjuplatan er hægra megin á myndinni fyrir neðan og hliðarplatan vinstara megin var skorin út tvisvar). Fyrir neðan plöturnar er festing sem á að passa inn í fót standsins, þarf því að passa að lengdin á festingunni sé jöfn breydd fótsins(12mm).<br/ >
+                                        Plötur:<p/>
+                                        <a href="#" class="image featured"><img src="images/Nes_standur_plotur.png" alt="" /></a>
+                                        <p>Til að halda plötunum sem standa upp úr saman þá bjó ég til fjórar festingar og festingar göt í gegnum plöturnar fyrir festingarnar. Stærðin á festingunum skiptir litlu máli svo lengi sem þær passa inn í götin á plötunum og nái milli beggja hliðarplata í gegnum miðplötuna.<br/ >
+                                        Festingar:<p/>
+                                        <a href="#" class="image featured"><img src="images/Nes_standur_festingar.png" alt="" /></a>
+                                        <p>3D módel af samsettum hlut:</p>
+                                        <a href="#" class="image featured"><img src="images/Nes_standur_model_samsettur.JPG" alt="" /></a>
+                                        <p>Við uppsetningu samsetta módelsins sjáum við hvort hlutirnir séu í réttum stærðum. Í mínu tilfelli voru öll hlutföll rétt og hluturinn passaði saman fullkomlega. <br/ >
+                                        Því var lítið annað að gera en að fletja hlutinn út og undirbúa hann undir skurð. <br/ >
+                                        Fyrir þetta skref þurfum við aðeins teikningar af pörtum en ekki þrívíða módelið. Ss bara tvívíðar teikningar. <br/ >
+                                        Þegar kveikt hefur verið á sýnileikar teikninga gæti verið sniðugt að highlighta allar teikningarnar, afrita þær og flytja afritin yfir á nýjan hlut. Ég skýrði þennan nýja hlut "utfleytt med kerf" og raðaði teikningunum upp þannig þær taki sem minnst pláss. <br/ >
+                                        Næsta skref er að reikna með Kerf. <br/ >
+                                        Kerf er efniseyðing sem á sér stað við skurð plötunnar. Í okkar tilfelli verður þessi efniseyðing út af geislanum sem notaður er við skurðinn. Kerf radíusinn var fundinn í öðru verkefni í sama áfanga. Í mínu tilfelli var kerfið 0.22mm fyrir þá skurðvél sem ég valdi. Deila þarf kerfinu í tvennt til að fá radíusinn á kerfinu. Í þetta sinn var radíusinn 0.11mm og var sú stærð notuð við að offsetta tvívíðu teikningarnar. <br/ >
+                                        Til þess að offseta þá er lína valin, hægri smellt á hana og þaðan valið "edit sketch":</p>
+                                        <a href="#" class="image featured"><img src="images/Nes_standur_editS.png" alt="" /></a>
+                                        <p>Eftir það er smellt á offset:</p>
+                                        <a href="#" class="image featured"><img src="images/Nes_standur_offsetTakki.JPG" alt="" /></a>
+										<p>Eftir það er línan færð út fyrir hlutinn að fjarlægð sem samsvarar hálfri Kerf lengd(0.11mm í mínu tilfelli). <br/ >
+                                        Þar sem geislaskerinn sem ég notaði getur ekki lesið Fusion360 teikningar þá þurfti ég að vista teikninguna sem DXF sjal. Þetta skjal var síðan opnað í Inkscape forritinu.</p>
+                                        <a href="https://inkscape.org" class="image featured"><img src="images/Nes_standur_Incscape.png" alt="" /></a>
+                                        <p>Í mínu tilfelli voru upprunalegu línurnar fyrir offsetið enþá til staðar þegar teikningin var opnuð í Inkscape. Þeim var eytt og skjalið vistað sem pdf. Pdf skjal þetta var fært yfir á minniskubb til að opna það í tölvunum sem tengdar eru við geislaskerana og pdf skjalið prentað þaðan á þeim geislaskera sem kerfið var mælt í. Mæli eindreigið með því að fá aðstoð frá starfsmönnum FabLab þegar að skurði er komið.<br/ >
+                                        Að skurði loknum er ekkert eftir annað en að setja hlutinn saman. <br/ >
+                                        Myndir af hlutnum:</p>
+                                        <a href="Verkefni2.html" class="image featured"><img src="images/Nes_standur2.jpg" alt="" /></a> 
+                                        <a href="Verkefni2.html" class="image featured"><img src="images/Nes_standur3.jpg" alt="" /></a> 
+                                        <a href="Verkefni2.html" class="image featured"><img src="images/Nes_standur4.jpg" alt="" /></a> 
+                                        <h2>Tímaskráning:</h2>
+                                        <p>Innblástur: 10min <br/ >
+                                        Teikningar og mælingar(handskrifað): 30min <br/ >
+                                        Niðurhal og uppsetning forrita: 45min <br/ >
+                                        Fusion 360 teikningar og extrude af stökum pörtum: 120min <br/ >
+                                        Samsetning stakra parta í Fusion 360: 10min <br/ >
+                                        Undirbúningur undir skurð: 60min <br >
+                                        Skurður: 10min <br/ >
+                                        Samsetning: 20min</p>
+                                        <h3>Samtals: 305 mínútur</h3>
 									</article>
 
 							</div>
