--- a/Verkefni3.html
+++ b/Verkefni3.html
@@ -79,11 +79,81 @@
 								<!-- Content -->
 									<article id="content">
 										<header>
-											<h2>Hér á að koma nafnið á verkefninu</h2>
-											<p>Hér á að koma verkefni sjálft</p>
+											<h2>Verkefni 3</h2>
+											<p>3D prentun</p>
 										</header>
-										<a href="Verkefni1.html" class="image featured"><img src="images/Haskolinn.jpg" alt="" /></a>
-										<p>Ekkert komið eins og er.</p>
+										<a href="Verkefni3.html" class="image featured"><img src="images/Stutur_storKrani_anVatns.jpg" alt="" /></a>
+                                        <h1>Uppruni hugmyndar:</h1>
+										<p>Við leit af hugmynd fyrir verkefni þá rakst ég á 3D prentaðann krana sem getur sprautað vatni í tvær mögulegar áttir. Upprunalega virkar hann eins og venjulegur krani en hefur einnig stút sem snýr upp og er þannig hægt að stífla neðri stútinn til að sprauta vatninu upp. Þetta einfaldar það að drekka úr honum.</p>
+                                        <a href="https://dornob.com/minimalist-3d-printed-tap-doubles-as-a-water-fountain/" class="image featured"><img src="images/3d_prent_hugmynd.jpg.crdownload" alt="" /></a>
+                                        <p>Þar sem ég ætla nú ekki að fara að skipta um neinn krana í húsinu mínu þá ákvað ég að hanna hlut sem herfur sömu virkni og þessi sérstaki eiginleiki kranans á myndinni hér að ofan. <br/ >
+                                        Ég ákvað að búa til stút sem hægt er að halda undir venjulegum krana og breyta þannig straumátt vatnsins og beina henni upp í loft.</p>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/3D_prent_samsett.JPG" alt="" /></a>
+                                        <p>Ég notaði Fusion 360 við gerð hlutarins.</p>
+                                        <a href="https://www.autodesk.com/campaigns/education/student-design" class="image featured"><img src="images/Fusion360_Logo.png" alt="" /></a>
+                                        <p>Hönnunin er afar einföld og samanstendur af 3 pörtum. Þó væri alveg hægt að gera hann úr aðeins einum. <br/ >
+                                        Til að byrja með mældi ég þvermálið á tveimur kranastútum sem voru á heimilinu mínu til að ákvarða þvermálið á stærri endanum á hlutnum mínum. Kranarnir á heimilinu mínu voru í tveimur ólíkum stærðum. Sá stærri var með rúma 12mm radíus en sá minni var með 10mm. Til að þessi stútur passaði á báða kranana þá ákvað ég að bæta við auka stút. Stúturinn er með kúrfu sem gerir notandanum kleyft að nota hlutinn á marga mismunandi krana.</p>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/3D_prent_kranaStutur.JPG" alt="" /></a>
+                                        <p>Þessi stútur er fastur á stærra opi hlutarins. Ef kraninn sem notandinn notar er með stóran radíus þá fer kraninn einfaldlega ekki jafn langt inn í stútinn. Ef kraninn er með minni radíus þá passar kraninn lengra inn í stútinn. Stúturinn var teiknaður sem tveir hringir með sömu radíusa og kranarnir heima hjá mér og voru þeir báðir teiknaðir á sama mið punkti. Bilið á milli hringjana var extrude-að og annar endinn á innrihringnum svo fillet-aður þannig kúrvan næði frá ytri hring yfir í þann neðri.<br/ >
+                                        Ég bjó svo til annan stút á minni enda hlutarins til að koma í veg fyrir að notandinn skeri varir sínar ef hann ákveður að drekka beint af stútnum. Þann stút má sjá á myndinni hér fyrir neðan.</p>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/3d_prent_munnStutur.JPG" alt="" /></a>
+                                        <p>Við gerð á rörinu sjálfu þá byrjaði ég að teikna báða endana. Hvor endi samanstendur af tveimur hringjum. Ég byrjaði á stærri(krana) endanum. Innri hringurinn var með sama radíus og smærri hraninn á heimili mínu. Sá stærri var með sama radíus og stærri kraninn. <br/ >
+                                        Fyrir smærri endann(munn endann) gaf ég mér stærðirnar 5mm og 6mm í radíus. Fjarlægðin á milli miðjupunt endana er 32.5mm.</p>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/3D_prent_hringir.JPG" alt="" /></a>
+                                        <p>Þegar þessi teikning var tilbúin þá bjó ég til nýja á öðru plani til að teikna boga sem nær frá yrstu punktum beggja hringja.</p>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/3D_prent_hringir_path.JPG" alt="" /></a>
+                                        <p>Ástæða þessa boga er til að leiðbeina loft skipuninni. Þegar báðar teikningar voru tilbúnar þá valdi ég Loft skipunina í stað extrude, valdi bilið milli hringjanna í báðum endum og valdi svo centerline sem hálfbogann.</p>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/3D_prent_loft.JPG" alt="" /></a>
+                                        <p>Þegar þessu skrefi var lokið þá tók ég eftir því að hluturinn lokaðist á báðum endum. Til að Opna hlutinn aftur smellti ég á útdregna hlutinn og valdi shell úr Tools flipanum í Fusion 360.</p>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/3D_prent_shell.JPG" alt="" /></a>
+                                        <p>Þetta opnaði samt ekki endana tvo og ákvað ég því að nota enfaldari aðferð til að opna hlutinn. Bjó ég til nýja teikningu og valdi plan sem endana tvo. Skar ég þannig út op báðum megin með því að extrude-a báða innri hringina inn í hlutinn. <br/ >
+                                        Þegar þessu var lokið setti ég saman alla þrjá hlutina. <br/ >
+                                        Þegar þesso var lokið þá fór ég með tölvuna mína í FabLab reykjavík sem staðsett er við FB og fékk þar aðstoð við prentun. Samsetti hluturinn var vistaður sem STL file og færður yfir á minniskubb. Minniskubburinn var svo tengdur við tölvurnar sem þeir voru með í FabLab því þær tölvur voru nú þegar tengdar við 3D prentarana. STL fællinn var þar opnaður í Cura forritinu.</p>
+                                        <a href="https://ultimaker.com/software/ultimaker-cura" class="image featured"><img src="images/Cura_Logo.JPG" alt="" /></a>
+                                        <p>Þar var teikningin skoðuð þánar frá sjónarhorni 3D prentarans. Þar sem hluturinn var furðulegur í laginu og undirstöður bogans líklegast ekki nógu góðar til að halda hlutnum uppi út prentunina þá ákvað ég að nota Tree support. <br/ >
+                                        Þar sem ég tók eingar myndir af Cura ferlinu mínu þá set ég inn mynd sem ég fann á netinu til að lýsa Tree Support undirstöðunni.</p>
+                                        <a href="https://www.fabbaloo.com/blog/2020/9/2/ultimaker-cura-4-7" class="image featured"><img src="images/3D_prent_TreeSupport.jpg" alt="" /></a>
+                                        <p>Þegar ég og FabLab starfsmaðurinn vorum orðnir sáttir um undirstöður hlutarins þá var hluturinn prentaður út. <br/ >
+                                        Að prentun lokinni þá voru undirstöður fjarlægðar og kroppaðar innan úr til að fá loka afurðina. Hér fyrir neðan má sjá hlutinn útprentaðann með Tree Support-ið enþá inni í rörinu.</p>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/3D_prent_TreeS.jpg" alt="" /></a>
+                                        <p>Þetta var kroppað úr rörinu og eftir stóð hluturinn tilbúinn. <br/ >
+                                        Lítið annað að gera en að prófa hlutinn á krönunum tveimur og sjá hvort hann virki.</p>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/Stutur_storKrani_medVatni.jpg" alt="" /></a>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/Stutur_litillKrani_medVatni.jpg" alt="" /></a>
+                                        <p>Eins og sést á myndunum hér fyrir ofan þá virkar hluturinn. Þrátt fyrir það þá virðist leka ansi mikið vatn meðframm stærri stútnum sem fer á kranann sjálfan. <br/ >
+                                        Þrátt fyrir það er ég sáttur með niðurstöðuna en eftir á þá hefði kannski verið betra að athuga hvort öruggt sé að drekka vatn sem flæðir í gegn um þessa tilteknu gerð af plasti. Ég hef því ekki þorað að drekka með þessum stút sjálfur þar sem ég hætti ekki minni eigin heilsu við að prófa hann.</p>
+                                        <h2>Tímaskráning:</h2>
+                                        <p>Innblástur: 30mín <br/ >
+                                        Mælingar: 10min <br/ >
+                                        Teikningar/Loft og extrusion í Fusion 360: 120min <br/ >
+                                        Samsetninga parta í Fusion 360: 20min <br/ >
+                                        Undirbúningur undir prentun: 40min <br/ >
+                                        Fjarlægja undirstöður útprents: 20min <br/ >
+                                        Prófun hlutar: 5min</p>
+                                        <h3>Samtals: 245 mínútur</h3>
+                                        <p><br/ ></p>
+                                        <h2>3D Skönnun: </h2>
+                                        <p>Fyrir þennan lið þá ákvað ég að skanna slökkvutæki sem ég fann í VR-2. <br/ >
+                                        Ég tók 25 myndir af slökkvutækinu frá hinum ýmissu sjónarhornum. <p/>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/3D_skann_myndir.JPG" alt="" /></a>
+                                        <p>Eftir það fór ég heim og sótti fría útgáfu af 3D Zephyr.</p>
+                                        <a href="https://www.3dflow.net/3df-zephyr-photogrammetry-software/" class="image featured"><img src="images/3D_Zephyr.JPG" alt="" /></a>
+                                        <p>Uppsetning þessa forrits var einföld og eftir að hafa samþykkt nokkra skilmála þá var forritið tilbúið í skönnun. <br/ >
+                                        Ég færði myndirnar af slökkvutækinu úr símanum mínum yfir í tölvuna og þaðan yfir í 3D Zephyr forritið eftir að hafa búið til nýtt project. <br/ >
+                                        Eftir það Leyfði ég forritinu bara að greina myndirnar og að lokum var ég kominn með 3D skannaðan hlut.</p>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/3D_skann1.JPG" alt="" /></a>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/3D_skann2.JPG" alt="" /></a>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/3D_skann3.JPG" alt="" /></a>
+                                        <a href="Verkefni3.html" class="image featured"><img src="images/3D_skann4.JPG" alt="" /></a>
+                                        <p>Eftirá hyggja þá hefði verið betra að taka bæði fleyri myndir og færa hlutinn frá sólinni því sólin skein á fremri part slökkvutækisins en skuggi var aftan á. <br/ >
+                                        Mig grunar að ljósa munurinn hafi ekki hjálpað beiglunni sem myndaðist á bakhlið tækisins að skönnun lokinni. Einnig gæti fjöldi mynda hafið haft áhrif á gæði upplausnar. </p>
+                                        <h2>Tímaskráning:</h2>
+                                        <p>Innblástur: 5min <br/ >
+                                        Myndataka: 10min <br/ >
+                                        Færsla mynda úr síma yfir í tölvu: 5min <br/ >
+                                        Niðurhal og uppsetning 3D Zephyr: 30min <br/ >
+                                        Vinnsla 3D Zephyr að 3D módeli: 10min</p>
+                                        <h3>Samtals: 60 mínútur</h3>
 									</article>
 
 							</div>
