--- a/Verkefni3.html
+++ b/Verkefni3.html
@@ -108,12 +108,12 @@
                                         <a href="Verkefni3.html" class="image featured"><img src="images/3D_prent_shell.JPG" alt="" /></a>
                                         <p>Þetta opnaði samt ekki endana tvo og ákvað ég því að nota enfaldari aðferð til að opna hlutinn. Bjó ég til nýja teikningu og valdi plan sem endana tvo. Skar ég þannig út op báðum megin með því að extrude-a báða innri hringina inn í hlutinn. <br/ >
                                         Þegar þessu var lokið setti ég saman alla þrjá hlutina. <br/ >
-                                        Þegar þesso var lokið þá fór ég með tölvuna mína í FabLab reykjavík sem staðsett er við FB og fékk þar aðstoð við prentun. Samsetti hluturinn var vistaður sem STL file og færður yfir á minniskubb. Minniskubburinn var svo tengdur við tölvurnar sem þeir voru með í FabLab því þær tölvur voru nú þegar tengdar við 3D prentarana. STL fællinn var þar opnaður í Cura forritinu.</p>
+                                        Svo fór ég með tölvuna mína í FabLab reykjavík sem staðsett er við FB og fékk þar aðstoð við prentun. Samsetti hluturinn var vistaður sem STL file og færður yfir á minniskubb. Minniskubburinn var svo tengdur við tölvurnar sem þeir voru með í FabLab því þær tölvur voru nú þegar tengdar við 3D prentarana. STL fællinn var þar opnaður í Cura forritinu.</p>
                                         <a href="https://ultimaker.com/software/ultimaker-cura" class="image featured"><img src="images/Cura_Logo.JPG" alt="" /></a>
-                                        <p>Þar var teikningin skoðuð þánar frá sjónarhorni 3D prentarans. Þar sem hluturinn var furðulegur í laginu og undirstöður bogans líklegast ekki nógu góðar til að halda hlutnum uppi út prentunina þá ákvað ég að nota Tree support. <br/ >
+                                        <p>Þar var teikningin skoðuð nánar frá sjónarhorni 3D prentarans. Þar sem hluturinn var furðulegur í laginu og undirstöður bogans líklegast ekki nógu góðar til að halda hlutnum uppi út prentunina þá ákvað ég að nota Tree support. <br/ >
                                         Þar sem ég tók eingar myndir af Cura ferlinu mínu þá set ég inn mynd sem ég fann á netinu til að lýsa Tree Support undirstöðunni.</p>
                                         <a href="https://www.fabbaloo.com/blog/2020/9/2/ultimaker-cura-4-7" class="image featured"><img src="images/3D_prent_TreeSupport.jpg" alt="" /></a>
-                                        <p>Þegar ég og FabLab starfsmaðurinn vorum orðnir sáttir um undirstöður hlutarins þá var hluturinn prentaður út. <br/ >
+                                        <p>Þegar ég og FabLab starfsmaðurinn vorum orðnir sáttir með undirstöður hlutarins þá var hluturinn prentaður út. <br/ >
                                         Að prentun lokinni þá voru undirstöður fjarlægðar og kroppaðar innan úr til að fá loka afurðina. Hér fyrir neðan má sjá hlutinn útprentaðann með Tree Support-ið enþá inni í rörinu.</p>
                                         <a href="Verkefni3.html" class="image featured"><img src="images/3D_prent_TreeS.jpg" alt="" /></a>
                                         <p>Þetta var kroppað úr rörinu og eftir stóð hluturinn tilbúinn. <br/ >
@@ -128,9 +128,10 @@
                                         Teikningar/Loft og extrusion í Fusion 360: 120min <br/ >
                                         Samsetninga parta í Fusion 360: 20min <br/ >
                                         Undirbúningur undir prentun: 40min <br/ >
+                                        Prentun: 180min <br/ >
                                         Fjarlægja undirstöður útprents: 20min <br/ >
                                         Prófun hlutar: 5min</p>
-                                        <h3>Samtals: 245 mínútur</h3>
+                                        <h3>Samtals: 425 mínútur</h3>
                                         <p><br/ ></p>
                                         <h2>3D Skönnun: </h2>
                                         <p>Fyrir þennan lið þá ákvað ég að skanna slökkvutæki sem ég fann í VR-2. <br/ >
@@ -146,7 +147,7 @@
                                         <a href="Verkefni3.html" class="image featured"><img src="images/3D_skann3.JPG" alt="" /></a>
                                         <a href="Verkefni3.html" class="image featured"><img src="images/3D_skann4.JPG" alt="" /></a>
                                         <p>Eftirá hyggja þá hefði verið betra að taka bæði fleyri myndir og færa hlutinn frá sólinni því sólin skein á fremri part slökkvutækisins en skuggi var aftan á. <br/ >
-                                        Mig grunar að ljósa munurinn hafi ekki hjálpað beiglunni sem myndaðist á bakhlið tækisins að skönnun lokinni. Einnig gæti fjöldi mynda hafið haft áhrif á gæði upplausnar. </p>
+                                        Mig grunar að ljósa munurinn hafi ekki hjálpað beiglunni sem myndaðist á bakhlið tækisins að skönnun lokinni. Einnig gæti fjöldi mynda haft áhrif á gæði upplausnarinnar sem ég fékk. </p>
                                         <h2>Tímaskráning:</h2>
                                         <p>Innblástur: 5min <br/ >
                                         Myndataka: 10min <br/ >
