Endur upload Lokaverkefni

--- a/Verkefni4.html
+++ b/Verkefni4.html
@@ -31,7 +31,7 @@
 											<li><a href="Verkefni2.html">Verkefni 2</a></li>
 											<li><a href="Verkefni3.html">Verkefni 3</a></li>
 											<li><a href="Verkefni4.html">Verkefni 4</a></li>
-											<li><a href="Verkefni5.html">Verkefni 5</a></li>
+											<li><a href="Verkefni5.html">Lokaverkefnið</a></li>
 										</ul>
 									</li>
 									<li><a href="UmMig.html">Um Mig</a></li>
@@ -56,7 +56,7 @@
 											</header>
 											<p>Lokaverkefnið í Framleiðslukerfum</p>
                                             <ul class="actions">
-												<li><a href="Verkefni5.html" class="button">Næsta verkefni</a></li>
+												<li><a href="Verkefni5.html" class="button">Lokaverkefnið</a></li>
 											</ul>
 										</section>
 										<section>
@@ -79,7 +79,7 @@
 								<!-- Content -->
 									<article id="content">
 										<header>
-											<h2>Lokaverkefnið</h2>
+											<h2>Verkefni 4</h2>
 											<p>Tik-Tak-Toe</p>
 										</header>
 										<a href="Verkefni4.html" class="image featured"><img src="images/Tik_tak_notMynd.jpg" alt="" /></a>
