--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 											<li><a href="Verkefni2.html">Verkefni 2</a></li>
 											<li><a href="Verkefni3.html">Verkefni 3</a></li>
 											<li><a href="Verkefni4.html">Verkefni 4</a></li>
-											<li><a href="Verkefni5.html">Verkefni 5</a></li>
+											<li><a href="Verkefni5.html">Lokaverkefnið</a></li>
 										</ul>
 									</li>
 									<li><a href="UmMig.html">Um Mig</a></li>
