--- a/Verkefni5.html
+++ b/Verkefni5.html
@@ -34,7 +34,7 @@
 							<article id="content">
 								<header>
 									<h2>Lokaverkefnið VÉL403G</h2>
-                                        <div class="boxed">
+                                        <div id="boxed">
                                             <h3>Hópmeðlimir:</h3>
                                             <li>
                                                 <a href="https://btk4.github.io/framleidsluferli/index.html">Björgvin Þór Kolbeinsson</a>
@@ -66,7 +66,7 @@
                                 <a href="https://github.com/SindriSm/Framleidsluferli_5" class="image featured"><img src="images/mot-hringur.jpg" alt="" /></a>
                                 <a href="https://github.com/SindriSm/Framleidsluferli_5" class="image featured"><img src="images/mot-kross.jpg" alt="" /></a>
                                 
-                            <div class="boxed">
+                            <div id="boxed">
                                 <h3>Milestones V4:</h3>
                                 <table>
                                   <tr>
@@ -108,7 +108,7 @@
                                 <h3>Samtals: 550 mínútur</h3>
                             </div>
                                 <p> <br/ > </p>
-                            <div class="boxed">
+                            <div id="boxed">
                                 <h3>Milestones V5:</h3>
                                 <table>
                                   <tr>
@@ -140,7 +140,7 @@
                                 <h3>Samtals: 265 mínútur</h3>
                             </div>
                                 <p> <br/ > </p>
-                            <div class="boxed">
+                            <div id="boxed">
                                 <h3>Milestones V6:</h3>
                                 <table>
                                   <tr>
@@ -183,7 +183,7 @@
                                         <source src="images/Tik-Tak_myndband.mp4" type="video/mp4">
                                     </video>
                                 </div>
-                            <div class="boxed">
+                            <div id="boxed">
                                 <h3>Skjöl:</h3>
                                 <table>
                                   <tr>
